style.css
:root{
  --first-color: #4d648d;
  --second-color: #1e1f26;
  --third-color: #283655;
  --fourth-color: #d0e1f9;
}

*{
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  font-size: 18px;
  box-sizing: border-box;
}

body{
  background: var(--fourth-color);
}

ul{
  list-style: none;
}

.title{
  font-size: 24px;
  text-align: center;
  margin: 30px 0 30px 0;
  color: var( --first-color);
}

.btn{
  position: relative;
  font-size: 16px;
  margin-left: 7px;
  padding:  8px 14px;
  border: 1px solid var(--third-color);
  border-radius: 3px;
  background-color: var( --first-color);
  color: var(--fourth-color);
  cursor: pointer;
}

.btn:hover{
  background-color: var(--third-color);
}

.btn:active{
  top: 2px;
  left: 2px;
}

.btn__swap{
  width: 110px;
}

input[type="text"]{
  padding: 7px 14px;
  outline: none;
  border-radius: 3px;
  border: none;
  color: var(--third-color);
  font-weight: 400;
}

.wrapper .wrapper__content{
  max-height: 100vh;
  max-width: 600px;
  padding: 10px 60px;
  margin: 0 auto;
}

.header{
  padding: 10px 0 15px 0px;
}

.header .header__task{
  width: 60%;
}

.main{
  padding-bottom: 20px;
}

.list{
  height: 370px;
  overflow-y: auto;
  overflow-x: hidden;
}

.list::-webkit-scrollbar{
  background-color: var( --first-color);
  border-radius: 8px;
  width: 8px;
  height: 90%;
  overflow: hidden;
  cursor: pointer;
}

.list::-webkit-scrollbar-thumb{
  background-color: var(--third-color);
  border-radius: 8px;
}

.list.list__disable{
  display: none;
}

.task{
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0px 0px 14px -3px var(--second-color);
  width: 90%;
  margin: 25px 15px;
  border-radius: 3px;
  transform: translateX(0px);
  z-index: -1;
}

.task .task__name {
  padding: 5px 14px;
  color: var(--third-color);
  font-weight: 400;
  width: 50%;
  word-wrap: break-word;
  border: none;
}

.task .task__flag {
  position: absolute;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
}

.task .task__flag_visible {
  position: relative;
  width: 18px;
  height: 18px;
  border: 1px solid var(--third-color);
  cursor: pointer;
}

.task .task__flag_active {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 12px;
  height: 12px;
  background-color: var(--third-color);
  display: none;
}

input:checked + .task__flag_active {
  display: block;
}

@keyframes move-right {
  0%{
    transform: translateX(0px);
  }
  100%{
    transform: translateX(105%);
  }
}

@keyframes move-left {
  0%{
    transform: translateX(100%);
  }
  100%{
    transform: translateX(0);
  }
}

.task__animation_remove {
  animation: move-right .9s;
}

.task__animation_add {
  animation: move-left .9s;
}

.task__name_visible {
  display: none;
}

.task__name_checked {
  text-decoration: line-through;
}

/* Select */

.select {
  position: relative;
  height: 20px;
  top: 10px;
  margin-bottom: 10px;
}

.select .select__wrapper {
  position: absolute;
  width: 100%;
}

.select .select__option {
  position: relative;
  width: 100%;
  font-size: 18px;
  padding: 7px 0;
  text-align: center;
  background-color: var(--fourth-color);
  color: var(--first-color);
  opacity: 0;
  cursor: pointer;
}

.select .select__option_selected {
  background-color: var(--fourth-color);
  border: 1px solid var(--first-color);
  display: block;
  opacity: 1;
}

.select .select__option.select__option_change {
  opacity: 1;
}

.select .select__option.select__option_change:hover {
  background-color: var(--first-color);
  color: var(--fourth-color);
  z-index: 5;
}

/*
.select{
  position: relative;
}

.select select{
  background: none;
  border: 1px solid var(--first-color);
  width: 99.5%;
  padding: 10px 20px;
  margin-top: 20px;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  outline: none;
  color: var(--first-color);
  cursor: pointer;
  background-color: var(--fourth-color);
  font-size: 20px;
}

.select::after{
  content: "";
  display: block;
  border-style: solid;
  border-width: 15px 10px 0 10px;
  border-color: var(--first-color) transparent transparent transparent;
  position: absolute;
  top: 55%;
  right: 40px;
  cursor: pointer;
}*/

